fix: icon click space taking too much space

--- a/themes/do-cyberpunk-theme/static/css/desktop.css
+++ b/themes/do-cyberpunk-theme/static/css/desktop.css
@@ -8,12 +8,7 @@
         url('../fonts/raskhal/RaskhalRegular.svg#RaskhalRegular') format('svg');
 }
 
-html {
-    height: 100%;
-}
-
 body {
-    height: 100%;
     width: 100%;
     margin: 0;
     display: flex;
